@@ -49,6 +49,10 @@ Version 8.39 xx-xxxxxx-201x
 
 12. Assertion code generator in JIT has been optimized.
 
+13. A pattern such as /(?<=((?C)0))/, which has a callout inside a lookbehind
+    assertion, caused pcre2test to generate incorrect output, and also to read 
+    uninitialized memory (detected by ASAN or valgrind).
+
 
 Version 8.38 23-November-2015
 -----------------------------
